Restyled some pages, fixed contact layout, dashboard button is only visible when you're logged in.

--- a/Avishays Stuff/Enrolment/css/style.css
+++ b/Avishays Stuff/Enrolment/css/style.css
@@ -1,4 +1,4 @@
-form.form label {
+div.form label {
 	float: left;
 	height: 23px;
 	padding-top: 5px;
@@ -6,7 +6,7 @@ form.form label {
 	margin-right: 10px;
 }
 
-form.form textarea{
+div.form textarea{
 	min-height: 200px;
 	min-width: 500px;
 }
@@ -14,10 +14,11 @@ form.form textarea{
 td.loginCheckbox input[type=checkbox]
 {
     float: left;    
-    margin-right: 10px;
+    margin-left: 59px;
 }
 
 td.loginCheckbox label
 {
-    float: left;    
+    float: left; 
+    margin-left: 5px;   
 }
